--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 body{
-    background-color:bisque ;
+    background-color:lightblue;
 }
 .container{
     margin: 0px;
     padding: 0px;
+   
 }
 .Tourist{
     font-size: 30px;
@@ -14,11 +15,13 @@ body{
     color: azure;
     font-weight: bolder;
     display: grid;
-    grid-template-columns: 20% 10% 10% 10% 13% 9% 9% 10% 10%;
+    grid-template-columns: 30% 8% 10% 8% 13% 8% 12% 15%;
     flex-direction: row; 
     height: 30px;
     font-size: 20px;
     padding: 25px;
+    position:fixed;
+    width: 95.6%;
 }
 .link{
     text-decoration: none;
@@ -53,40 +56,67 @@ body{
     background-color:  rgba(0, 128, 0, 0.663);
     transition-duration: 2s;
 }
-.wel{
-    color: rgb(213, 34, 58);
-    font-weight: bolder;
-    text-align: center;
-    font-size: 30px;
-    padding: 30px;
-    background-color: lightblue;
-}
 .img {
-    display: block;
-    margin: 0 auto;
+    display: grid;
+    padding-top: 80px;
+    grid-template-rows: 10% 20%;
+    flex-direction: column;
     transition: transform 0.8s ease;
-    transform-origin: center center;
+    transform-origin:  center;
     cursor: pointer;
   }
 .img:active {
     transform: scale(0.5);
 }
-  
+.marquee {
+    overflow: hidden;
+    white-space: nowrap;
+    box-sizing: border-box;
+  }
+
+  .marquee span {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 10s linear infinite;
+    font-size: 2rem;
+    font-weight: bold;
+    color: #FFFFFF;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+
+  @keyframes marquee {
+    from {
+      transform: translateX(100%);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
+.image {
+    display: block;
+    margin-top: 30px;
+    padding: 30px;
+    transition: transform 0.8s ease;
+    transform-origin: center center;
+    cursor: pointer;
+  }
+.image:active {
+    transform: scale(0.5);
+} 
 .place{
     background-color: rgba(0, 128, 0, 0.663);
     font-size: 30px;
     font-weight: bolder;
     text-align: center;
-    height: 50px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    height: 20px;
+    padding-bottom: 30px;
 }
 .places{
     text-align: center;
     display: grid;
-    grid-template-columns:  50% 30%;
+    grid-template-columns:  50% 40%;
     flex-direction: row; 
-    padding: 30px;
+    padding-right: 40px;
     background-color: lightblue;
 }
 .placename
@@ -97,9 +127,9 @@ body{
     display: grid;
     grid-template-columns:  50% 50%;
     flex-direction: row; 
-    padding: 10px;
+
     background-color: lightblue;
-    padding-bottom: 30px;
+    
 }
 .placename:hover{
     cursor: pointer;
@@ -136,4 +166,10 @@ body{
 .contact:hover{
     color: aqua;
     cursor: pointer;
+}
+#targetSection {
+    margin-top: 1000px; /* Place the section further down for demonstration */
+    padding: 20px;
+    background-color: lightblue;
+    height: 2000px; 
 }
