--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,34 @@
 body{
-    background-color:lightblue;
+    background-color:rgba(0, 128, 0, 0.663); 
+    overflow-x: hidden;
+    
 }
 .container{
     margin: 0px;
     padding: 0px;
-   
+    position:fixed;
 }
 .Tourist{
     font-size: 30px;
     cursor: pointer;
 }
-.info{
+.header{
     background-color: rgba(0, 128, 0, 0.663);
     color: azure;
     font-weight: bolder;
     display: grid;
-    grid-template-columns: 30% 8% 10% 8% 13% 8% 12% 15%;
+    grid-template-columns: 25% 10% 17% 13% 13% 13% 10%;
     flex-direction: row; 
-    height: 30px;
-    font-size: 20px;
-    padding: 25px;
-    position:fixed;
-    width: 95.6%;
-}
-.link{
-    text-decoration: none;
-    color: aliceblue;
-}
-.link:hover{
-    color: aqua;
+    padding:  20px;
     cursor: pointer;
+    width: 95.65%;
+    font-weight: bolder;
+    font-size: 25px;
+    position: fixed;
+    border: 5px solid rgb(28, 5, 140);
+    box-shadow: 0 0 20px rgb(25, 0, 255);
 }
-.loginbutton{
-    background-color: rgba(0, 128, 0, 0.663);
-    color: aliceblue;
-    font-size:15px;
-    font-weight: bold;   
-}
-.loginbutton:hover{
-    color: aqua;
-}
-.button{
+.book-button{
     color: rgba(0, 128, 0, 0.663);;
     background-color: white;
     border-color: aliceblue;
@@ -48,43 +36,88 @@ body{
     width:100px;
     cursor:pointer;
     border-radius: 10px;
-    font-size:15px;
-    font-weight: bold;          
+    font-size:20px;
+    font-weight: bolder;     
+    font-family: 'Times New Roman', Times, serif;     
 }
-.button:hover{
+.book-button:hover{
     color: aqua;
     background-color:  rgba(0, 128, 0, 0.663);
     transition-duration: 2s;
 }
 .img {
     display: grid;
-    padding-top: 80px;
-    grid-template-rows: 10% 20%;
-    flex-direction: column;
+    padding-top: 90px;
     transition: transform 0.8s ease;
     transform-origin:  center;
     cursor: pointer;
+    grid-template-columns: 35% 50%;
+    flex-direction: row; 
   }
-.img:active {
-    transform: scale(0.5);
+.img1{
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 10px rgb(25, 0, 255);
+    height: 700px;
+    width: 284%;
+}
+
+.login-btn{
+    margin-top: 200px;
+    width:20%;
+    height: 8%;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bolder;
+    color: beige;
+    background-color: rgb(13, 176, 40);
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 10px rgb(25, 0, 255);
+}
+.login-btn:hover{
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 40px rgb(25, 0, 255);
+}
+.register-btn{
+    width: 20%;
+    height: 8%;
+    margin-left: 100px;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bolder;
+    color: beige;
+    background-color: rgb(13, 176, 40);
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 10px rgb(25, 0, 255);
+}
+.register-btn:hover{
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 40px rgb(25, 0, 255);
+}
+a{
+    color: black;
+    cursor: pointer;
+    text-decoration: none;
+}
+a:hover{
+    color: blue;
 }
 .marquee {
     overflow: hidden;
     white-space: nowrap;
     box-sizing: border-box;
-  }
-
-  .marquee span {
+   padding-top: 50px;
+   margin-right: 350px;
+}
+.marquee span {
     display: inline-block;
     padding-left: 100%;
-    animation: marquee 10s linear infinite;
+    animation: marquee 4s linear infinite;
     font-size: 2rem;
     font-weight: bold;
-    color: #FFFFFF;
+    color:red;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-
-  @keyframes marquee {
+}
+@keyframes marquee {
     from {
       transform: translateX(100%);
     }
@@ -94,55 +127,166 @@ body{
   }
 .image {
     display: block;
-    margin-top: 30px;
-    padding: 30px;
-    transition: transform 0.8s ease;
+    transition: transform 0.5s ease, scale 0.3s ease;
     transform-origin: center center;
     cursor: pointer;
   }
-.image:active {
-    transform: scale(0.5);
+.image:hover  {
+    transform:translateY(-20px) scale(0.8);
+    
 } 
+.image-container {
+    position: relative;
+    width: 460px;
+    height: 400px;
+}
+
+.hover-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: none;
+    font-size: 1.2em;
+}
+
+.image-container:hover .hover-text {
+    display: block;
+}
+
+.image-container:hover .image {
+    transform: scale(0.9); 
+}
+.buttons{
+    font-weight: bolder;
+    color: aliceblue;
+   
+    width: auto;
+}
+
 .place{
-    background-color: rgba(0, 128, 0, 0.663);
     font-size: 30px;
     font-weight: bolder;
     text-align: center;
     height: 20px;
     padding-bottom: 30px;
+   padding-top: 30px;
+   border: 4px solid rgb(28, 5, 140);
+   box-shadow: 0 0 10px rgb(25, 0, 255);
+}
+.place:hover{
+    cursor: pointer;
+    color:blue ;
+    
+}
+
+.place-info{
+    background-color: rgba(10, 145, 248, 0.477);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 25px;
+    width: 96.1%;
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 10px rgb(25, 0, 255);
+}
+.box {
+    background-color: rgba(10, 145, 248, 0.477);
+    color: black;
+    font-weight: bolder;
+    text-align: center;
+    width: 98%;
+    border-radius: 8px;
+    font-size: 1.2em;
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 10px rgb(25, 0, 255);
+}
+.box:hover{
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 50px rgb(28, 5, 140);
+    cursor: pointer;
 }
 .places{
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 10px rgb(25, 0, 255);
+    font-size: 30px;
+    font-weight: bolder;
     text-align: center;
-    display: grid;
-    grid-template-columns:  50% 40%;
-    flex-direction: row; 
-    padding-right: 40px;
-    background-color: lightblue;
+    height: 20px;
+    padding-bottom: 30px;
+   padding-top: 30px;
+   width: 99.5%;
+}
+.places:hover{
+    cursor: pointer;
+    color:blue ;
+    
+}
+.para{
+   
+    text-align: justify;
+    padding: 30px;
+    line-height: 1.5;
+    font-size: 18px;
+    background-color: rgba(10, 145, 248, 0.477);
+}
+.border{
+    width: 99.5%;
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 50px rgb(28, 5, 140);
+}
+.typing {
+    margin-left: 550px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 24px;
+    font-weight: bolder;
+    color: rgb(3, 71, 11);
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid black;
+    animation: typing 5s steps(15) infinite, blink 0.5s step-end infinite;
+}
+
+@keyframes typing {
+    from {
+        width: 0;
+    }
+    to {
+        width: 37ch; /* Match the width of the text */
+    }
 }
 .placename
 {
-    text-align: center;
-    font-size: 30px;
-    font-weight: bolder;
+    background-color: rgba(10, 145, 248, 0.477);
     display: grid;
-    grid-template-columns:  50% 50%;
-    flex-direction: row; 
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 25px;
+    width: 96.5%;
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
 
-    background-color: lightblue;
-    
-}
-.placename:hover{
-    cursor: pointer;
-    color: blue;
-}
 .black{
-    background-color: black;
+    background: linear-gradient(to bottom right, violet, blue, rgb(30, 30, 97));
+    width: 99.45%;
     height: 300px;
     display: grid;
     grid-template-columns: 30%  40% 30% ;
     flex-direction: row; 
-    color: beige;
+    color: black;
+    font-weight: bolder;
     padding:0 ;
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 50px rgb(28, 5, 140);
 }
 .tour{
     text-align: center;
@@ -154,9 +298,16 @@ body{
     cursor: pointer;
 }
 .link{
+    text-decoration: none;
+    color: black;
+    font-weight: bolder;
     text-align: center;
     margin-top:60px ;
     line-height: 1.5;  
+}
+.link:hover{
+    color: greenyellow;
+    cursor: pointer;
 }
 .contact{
     text-align: center;
