--- a/kanyakumari.css
+++ b/kanyakumari.css
@@ -1,127 +1,155 @@
 body{
-    background-color:bisque ;
+    background-color:rgba(0, 128, 0, 0.663); 
+    overflow-x: hidden;
+    
 }
-.container{
-    margin: 0px;
-    padding: 0px;
-}
-.Tourist{
-    font-size: 30px;
-    cursor: pointer;
-}
-.info{
-    background-color: rgba(0, 128, 0, 0.663);
-    color: azure;
-    font-weight: bolder;
-    display: grid;
-    grid-template-columns: 20% 10% 10% 10% 13% 9% 9% 10% 10%;
-    flex-direction: row; 
-    height: 30px;
-    font-size: 20px;
-    padding: 25px;
-}
-.link{
-    text-decoration: none;
-    color: aliceblue;
-}
-.link:hover{
-    color: aqua;
-    cursor: pointer;
-}
-.loginbutton{
-    background-color: rgba(0, 128, 0, 0.663);
-    color: aliceblue;
-    font-size:15px;
-    font-weight: bold;   
-}
-.loginbutton:hover{
-    color: aqua;
-}
-.button{
-    color: rgba(0, 128, 0, 0.663);;
-    background-color: white;
-    border-color: aliceblue;
-    height:40px;
-    width:100px;
-    cursor:pointer;
-    border-radius: 10px;
-    font-size:15px;
-    font-weight: bold;          
-}
-.button:hover{
-    color: aqua;
-    background-color:  rgba(0, 128, 0, 0.663);
-    transition-duration: 2s;
-}
-.img {
-    display: block;
-    margin: 0 auto;
-    transition: transform 0.8s ease;
-    transform-origin: center center;
-    cursor: pointer;
-    width: 100%;
-    height: 700px;
-  }
-.img:active {
-    transform: scale(0.5);
-}
-
 .places{
-    text-align: center;
-    display: grid;
-    grid-template-rows: 30% ;
-    flex-direction: column; 
-    padding: 30px;
-    background-color: lightblue;
-    font-size: 35px;
+   background-color: green;
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 10px rgb(25, 0, 255);
+    font-size: 30px;
     font-weight: bolder;
+    text-align: center;
+    height: 20px;
+    padding-bottom: 30px;
+   padding-top: 30px;
+   width: 99.5%;
+}
+.places:hover{
     cursor: pointer;
+    color:blue ;
+    
+}
+.Pack{
+    color: red;
+    padding: 600px;
+    font-weight: bolder;
+    font-size: 30px;
+}
+button{
+    margin-left: 680px;
+    font-weight: bolder;
+    background-color: green;
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 10px rgb(25, 0,255);
 }
 .para{
-    background-color: lightblue;
+   
     text-align: justify;
-    font-size: 20px;
     padding: 30px;
     line-height: 1.5;
+    font-size: 18px;
+    background-color: rgba(10, 145, 248, 0.477);
 }
-.attracts{
-    display: flex;
+.para:hover{
+    cursor: pointer;
+    color: darkblue;
 }
-.Pic{
-    width: 480px;
-    height: 400px;
-    padding: 10px;
+.border{
+    width: 99.5%;
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 50px rgb(28, 5, 140);
+}
+.typing {
+    margin-left: 550px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 24px;
+    font-weight: bolder;
+    color: rgb(3, 71, 11);
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid black;
+    animation: typing 5s steps(15) infinite, blink 0.5s step-end infinite;
 }
 
-.black{
-    background-color: black;
-    height: 300px;
+@keyframes typing {
+    from {
+        width: 0;
+    }
+    to {
+        width: 36ch; /* Match the width of the text */
+    }
+}
+.image {
+    display: block;
+    transition: transform 0.5s ease, scale 0.3s ease;
+    transform-origin: center center;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+.image:hover  {
+    transform:translateY(-20px) scale(0.8);
+    
+} 
+.placename
+{
+    background-color: rgba(10, 145, 248, 0.477);
     display: grid;
-    grid-template-columns: 30%  40% 30% ;
-    flex-direction: row; 
-    color: beige;
-    padding:0 ;
-}
-.tour{
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 25px;
+    width: 96.5%;
     text-align: center;
-    margin-top:60px ;
-    line-height: 1.5;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
-.tour:hover{
-    color: aqua;
+
+.box {
+    background-color: rgba(10, 145, 248, 0.477);
+    color: black;
+    font-weight: bolder;
+    text-align: center;
+    width: 98%;
+    border-radius: 8px;
+    font-size: 1.2em;
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 10px rgb(25, 0, 255);
+}
+.box:hover{
+    border: 4px solid rgb(28, 5, 140);
+    box-shadow: 0 0 50px rgb(28, 5, 140);
     cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.link{
-    text-align: center;
-    margin-top:60px ;
-    line-height: 1.5;  
+.image-container {
+    position: relative;
+    width: 460px;
+    height: 400px;
 }
-.contact{
-    text-align: center;
-    margin-top:60px ;
-    line-height: 1.5;  
+
+.hover-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: none;
+    font-size: 1.2em;
 }
-.contact:hover{
-    color: aqua;
-    cursor: pointer;
+
+.image-container:hover .hover-text {
+    display: block;
+}
+
+.image-container:hover .image {
+    transform: scale(0.9); /* Slight scale effect with hover */
+}
+@media (max-width: 768px) {
+    .placename {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 480px) {
+    .placename {
+        grid-template-columns: 1fr;
+    }
+
+    .image {
+        width: 100%;
+        height: auto;
+    }
 }
